[tool.poetry]
name = "test-prgm"
version = "0.1.0"
description = ""
authors = ["curled-bash <170389261+curled-bash@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "test_prgm.app:main"
